Moving to another machine, wtf node...

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "src/models"
   ],
   "scripts": {
-    "graphql-start": "yarn workspace graphql start",
+    "graphql-start": "yarn workspace graphql-api start",
     "models-build": "yarn workspace models build"
   }
 }
