--- a/src/graphql/package.json
+++ b/src/graphql/package.json
@@ -6,18 +6,20 @@
     "apollo-server-express": "^3.5.0",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
-    "lodash": "^4.17.21",
+    "express": "^4.17.1",
+    "graphql": "^16.0.1",
+    "lodash": "^4.17.19",
     "models": "1.0.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.2",
     "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.4.0",
     "typescript": "^4.1.3"
   },
   "scripts": {
