--- a/src/models/package.json
+++ b/src/models/package.json
@@ -1,15 +1,9 @@
 {
     "name": "models",
     "version": "1.0.0",
-    "main": "build/src/index.js",
-    "types": "build/src/index.d.ts",
+    "main": "./dist/src/index.js",
+    "types": "./dist/src/index.d.ts",
     "devDependencies": {
-      "@typescript-eslint/eslint-plugin": "^5.5.0",
-      "@typescript-eslint/parser": "^5.5.0",
-      "eslint": "^8.3.0",
-      "eslint-config-prettier": "^8.3.0",
-      "eslint-plugin-prettier": "^4.0.0",
-      "prettier": "^2.2.1",
       "typescript": "^4.1.3"
     },
     "scripts": {
