--- a/src/models/tsconfig.json
+++ b/src/models/tsconfig.json
@@ -1,18 +1,17 @@
 {
-    "compilerOptions": {
-      "target": "ES2016",
-      "module": "commonjs",
-      "lib": ["esnext"],
-      "allowJs": true,
-      "removeComments": true,
-      "strict": true,
-      "outDir": "build",
-      "esModuleInterop": true,
-      "skipLibCheck": true,
-      "declaration": true,
-      "declarationMap": true,
-      "sourceMap": true,
-      "composite": true
-    },
-    "include": ["src/**/*"]
+  "compilerOptions": {
+    "target": "es2020",
+    "module": "es2020",
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "removeComments": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "composite": true
   }
+}
