--- a/src/graphql/package.json
+++ b/src/graphql/package.json
@@ -9,6 +9,7 @@
     "apollo-datasource-rest": "^3.4.0",
     "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.5.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.7.2",
     "models": "1.0.0"
@@ -22,6 +23,7 @@
     "typescript": "^4.5.2"
   },
   "scripts": {
-    "start": "nodemon ./src/server.ts --exec ts-node"
+    "watch": "nodemon --watch './**/*.{ts,graphql}' --exec 'node --experimental-specifier-resolution=node --loader ts-node/esm' src/server.ts",
+    "dev": "tsc-watch --onSuccess \"yarn watch\""
   }
 }
