--- a/src/models/package.json
+++ b/src/models/package.json
@@ -1,12 +1,15 @@
 {
-    "name": "models",
-    "version": "1.0.0",
-    "main": "./dist/src/index.js",
-    "types": "./dist/src/index.d.ts",
-    "devDependencies": {
-      "typescript": "^4.1.3"
-    },
-    "scripts": {
-      "build": "tsc"
-    }
+  "name": "models",
+  "version": "1.0.0",
+  "main": "./dist/src/index.js",
+  "types": "./dist/src/index.d.ts",
+  "devDependencies": {
+    "@shopify/eslint-plugin": "^41.0.1",
+    "eslint": "^8.3.0",
+    "prettier": "^2.5.0",
+    "typescript": "^4.1.3"
+  },
+  "scripts": {
+    "build": "tsc"
   }
+}
