--- a/src/graphql/package.json
+++ b/src/graphql/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.5.2"
   },
   "scripts": {
-    "watch": "nodemon --watch './**/*.{ts,graphql}' --exec 'node --experimental-specifier-resolution=node --loader ts-node/esm' src/server.ts"
+    "watch": "nodemon --watch './**/*.{ts,graphql}' --exec 'node --experimental-specifier-resolution=node --loader ts-node/esm' src/server.ts",
+    "build": "tsc"
   }
 }
