--- a/.github/workflows/yarn-build-ci.yml
+++ b/.github/workflows/yarn-build-ci.yml
@@ -10,16 +10,16 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Yarn Install
-    - uses: borales/actions-yarn@v2.3.0
+      uses: borales/actions-yarn@v2.3.0
       with:
         cmd: install
     
     - name: Build Models
-    - uses: borales/actions-yarn@v2.3.0
+      uses: borales/actions-yarn@v2.3.0
       with:
         cmd: workspace models build
     
     - name: Build GraphQL API
-    - uses: borales/actions-yarn@v2.3.0
+      uses: borales/actions-yarn@v2.3.0
       with:
         cmd: workspace graphql-api build
