--- a/src/graphql/package.json
+++ b/src/graphql/package.json
@@ -2,7 +2,7 @@
   "name": "graphql-api",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/src/server.js",
+  "main": "build/src/server.js",
   "dependencies": {
     "apollo-datasource-rest": "^3.4.0",
     "apollo-server-core": "^3.5.0",
@@ -16,9 +16,9 @@
     "@shopify/eslint-plugin": "^41.0.1",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.11",
-    "eslint": "^8.3.0",
+    "eslint": "^8.4.0",
     "nodemon": "^2.0.15",
-    "prettier": "^2.5.0",
+    "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.1.3"
   },
