--- a/src/graphql/tsconfig.json
+++ b/src/graphql/tsconfig.json
@@ -3,11 +3,15 @@
     "target": "es2016",
     "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "./dist",
+    "lib": ["esnext"],
+    "outDir": "build",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
     "removeComments": true
-  }
+  },
+  "include": [
+    "src"
+  ]
 }
