--- a/src/models/package.json
+++ b/src/models/package.json
@@ -1,12 +1,12 @@
 {
   "name": "models",
   "version": "1.0.0",
-  "main": "./dist/src/index.js",
-  "types": "./dist/src/index.d.ts",
+  "main": "build/src/index.js",
+  "types": "build/src/index.d.ts",
   "devDependencies": {
     "@shopify/eslint-plugin": "^41.0.1",
-    "eslint": "^8.3.0",
-    "prettier": "^2.5.0",
+    "eslint": "^8.4.0",
+    "prettier": "^2.5.1",
     "typescript": "^4.1.3"
   },
   "scripts": {
