--- a/src/models/tsconfig.json
+++ b/src/models/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es2016",
     "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "./dist",
+    "lib": ["esnext"],
+    "outDir": "build",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -13,5 +14,8 @@
     "declarationMap": true,
     "sourceMap": true,
     "composite": true
-  }
+  },
+  "include": [
+    "src"
+  ]
 }
